add flip-card like features

--- a/profileidea.html
+++ b/profileidea.html
@@ -8,8 +8,31 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body> 
-        <div id="leftdiv"></div>
-        <div id="toprightdiv"></div>
-        <div id="bottomrightdiv"></div>
+        <div id="leftdiv" class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front"></div>
+                <div class="flip-card-back">
+                    <a href="www.google.com">A link added</a>
+                </div>
+            </div>
+        </div>
+
+        <div id="toprightdiv"class="flip-card" >
+            <div class="flip-card-inner">
+                <div class="flip-card-front"></div>
+                <div class="flip-card-back">
+                    <a href="www.google.com">A link added</a>
+                </div>
+            </div>
+        </div>
+
+        <div id="bottomrightdiv" class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front"></div>
+                <div class="flip-card-back">
+                    <a href="www.google.com">A link added</a>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
