add pages and make styling changes

--- a/skill.html
+++ b/skill.html
@@ -1,3 +1,4 @@
+<p>This page looks boring for now, but has great content and information</p>
 <h1>Full Stack Web Development</h1>
 <ul>
     <li>Languages and Frameworks:</li>
