update profile pages

--- a/about.html
+++ b/about.html
@@ -1,8 +1,9 @@
 <p>This page also looks boring for now, but the content is phenomenal.</p>
 <h1>Alison Reilly, Full Stack Web Developer</h1>
 <p>Currently working through a software development immersive with the Flatiron School.</p>
-<p>Finishing Soon, currently: 60% through the curriculum.</p>
-<p>Currently learning Rails, next Javascript, followed by React and Redux.</p>
+<p>Finishing Soon, currently: 85% through the curriculum.</p>
+<p>Currently learning React and Redux.</p>
 <p>Career Goals: Get a job in web development or any other software development as soon as possible. Preferbaly remote work, or near Miami, will consider other places.</p>
 <p>Specific career interests: priority is web development, interest in video game development and any machinery based software (as in a car, airplane, spaceship, etc.).</p>
-<p>Available for freelance work, can develop full web apps currently in Ruby with Sinatra, Ruby with Rails, database integration, HTML and CSS.</p>
+<p>Available for freelance work, can develop full web apps currently in Ruby with Sinatra, Ruby with Rails, JavaScript front end</p>
+<p>Can also work with 2D game development in Phaser3</p>
