update new and currently working on section

--- a/working_changes_ip/index.html
+++ b/working_changes_ip/index.html
@@ -56,10 +56,10 @@
             <div id="new-current" class="col-3 col-s-12 panes">
               <h3>What's new and currently working on:</h3>
               <div class="content" >
-                <p>Learning React<br><a href="https://github.com/Tsunamins?utf8=%E2%9C%93&tab=repositories&q=react&type=&language=">
+                <p>Final Project Completed! Fauxtel Hotels<br><a href="https://github.com/Tsunamins/FauxtelHotels">
                     <img src="/images/GitHub-Mark-Light-64px.png"></a></p>
-                <p>Learning Three.js animation engine</p>
-                <p>Learning Blender 3D Modeling</p>
+                <p>Applying for jobs! Hire me!</p>
+                <p>Setting goals for next project, something in Node.js perhaps</p>
                 <p>Improving this portfolio</p>
                 </div>
             </div>
