--- a/working_changes_ip/index.html
+++ b/working_changes_ip/index.html
@@ -28,7 +28,7 @@
 
        
             <div class="overlay-link" id="overlay-link">
-                <a href="/pages/webgltest.html">Controlable View</a>
+                <a href="/pages/webglfullpage.html">Controlable View</a>
                 
                 <a href="#">Modal More info</a href="#">
             </div>
