--- a/working_changes_ip/pages/webglfullpage.html
+++ b/working_changes_ip/pages/webglfullpage.html
@@ -6,7 +6,7 @@
         <title>Alison Reilly, developer</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="../style/webgltest.css">
+        <link rel="stylesheet" type="text/css" href="../style/webglfullpage.css">
        
     </head>
     <body>
@@ -33,6 +33,6 @@
 
 
 
-        <script type="module" src="../js/webgltest.js"></script>
+        <script type="module" src="../js/webglfullpage.js"></script>
 </body>
 </html>
