--- a/working_changes_ip/index.html
+++ b/working_changes_ip/index.html
@@ -14,7 +14,7 @@
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <a href="#" class="button">Home</a>
-            <a href="/pages/videos.html" class="button">Projects</a>
+            <a href="./pages/videos.html" class="button">Projects</a>
             <a href="/cats-dream/game.html" class="button">2D Game Demo</a>
             <a href="/pages/art.html">Art & Design</a>
             <a href="/pages/skill.html" class="button">Summary of Skills</a>
