change reference to local

--- a/working_changes_ip/index.html
+++ b/working_changes_ip/index.html
@@ -42,7 +42,7 @@
             <h3>Features</h3>
             <nav id="nav">
                 <a href="/pages/skill.html">Skills Overview</a>
-                <a href="/pages/videos.html">Fullstack projects</a>
+                <a href="./pages/videos.html">Fullstack projects</a>
                 <a href="/cats-dream/game.html">2D Game Demo</a>
                 <a href="/pages/webgltest.html">Controllable view of above image</a>
                     <a href="/pages/about.html">       About</a>
