--- a/working_changes_ip/pages/videos.html
+++ b/working_changes_ip/pages/videos.html
@@ -24,10 +24,10 @@
               </div>
               <div class="column">
                 <div class="content">
-                  <iframe width="560" height="315" src="https://www.youtube.com/embed/iXHxxS2jWvs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                  <h3><a href="https://youtu.be/iXHxxS2jWvs ">Miami Rooftop Pools - YouTube</a></h3>
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/rlPety4CSeY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <h3><a href="https://youtu.be/rlPety4CSeY">Miami Rooftop Pools - YouTube</a></h3>
                   <h3><a href="https://github.com/Tsunamins/miami_rooftop_pools.git">Miami Rooftop Pools - GitHub</a></h3>
-                  <p>A Sinatra web app demonstrating Sinatra based CRUD and RESTful routing.  The app allows users to login with secure encryption, create a profile, add a rooftop pool and it's details, and view other user's pool collections</p>
+                  <p>A Sinatra web app demonstrating Sinatra based CRUD and RESTful routing.  The app allows users to login with secure encryption, create a profile, add a rooftop pool and it's details, and view other user's pool collections. User experience enhanced with CSS Animations and Bootstrap.</p>
                 </div>
               </div>
 
