update naming and ready for cpanel upload

--- a/changed_files_for_upload/index.html
+++ b/changed_files_for_upload/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link href="https://fonts.googleapis.com/css?family=Exo+2&display=swap" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="../style/index.css">
+        <link rel="stylesheet" type="text/css" href="./style/index.css">
         <title>Alison Reilly, developer</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -44,7 +44,7 @@
                 <a href="/pages/skill.html">Skills Overview</a>
                 <a href="/pages/videos.html">Fullstack projects</a>
                 <a href="/cats-dream/game.html">2D Game Demo</a>
-                <a href="/pages/webgltest.html">Controllable view of above image</a>
+                <a href="/pages/webglfullpage.html">Controllable view of above image</a>
                     <a href="/pages/about.html">       About</a>
             </nav>
 
@@ -57,7 +57,7 @@
               <h3>What's new and currently working on:</h3>
               <div class="content" >
                 <p>Final Project Completed! Fauxtel Hotels<br><a href="https://github.com/Tsunamins/FauxtelHotels">
-                    <img src="../images/GitHub-Mark-Light-64px.png"></a></p>
+                    <img src="/images/GitHub-Mark-Light-64px.png"></a></p>
                 <p>Applying for jobs! Hire me!</p>
                 <p>Setting goals for next project, something in Node.js perhaps</p>
                 <p>Improving this portfolio</p>
@@ -67,8 +67,8 @@
     </div>
     
 
-        <script type="module" src="../js/headeranim.js"></script>
-        <script src="../js/index.js"></script>
+        <script type="module" src="/js/headeranim.js"></script>
+        <script src="/js/index.js"></script>
         
     </body>
 </html>
