change file for working locally

--- a/working_changes_ip/index.html
+++ b/working_changes_ip/index.html
@@ -28,7 +28,7 @@
 
        
             <div class="overlay-link" id="overlay-link">
-                <a href="/pages/webglfullpage.html">Controlable View</a>
+                <a href="./pages/webglfullpage.html">Controlable View</a>
                 
                 <a href="#">Modal More info</a href="#">
             </div>
@@ -44,7 +44,7 @@
                 <a href="/pages/skill.html">Skills Overview</a>
                 <a href="./pages/videos.html">Fullstack projects</a>
                 <a href="/cats-dream/game.html">2D Game Demo</a>
-                <a href="/pages/webgltest.html">Controllable view of above image</a>
+                <a href="./pages/webglfullpage.html">Controllable view of above image</a>
                     <a href="/pages/about.html">       About</a>
             </nav>
 
