--- a/working_changes_ip/pages/about.html
+++ b/working_changes_ip/pages/about.html
@@ -15,11 +15,11 @@
     <div id="about">
     <h1>Alison Reilly, Full Stack Web Developer</h1>
         
-            <p>Nearly finished with the software development immersive with the Flatiron School.</p>
+            <p>Completed a full stack web development program with the Flatiron School, building foundations in Ruby/Rails, JavaScript and React.</p>
             <p>Career Outlook: Ready to apply the skills I've learned over the last year, plan to keep learning and expanding my knowledge.</p>
             <p>Career interests: priority is web development, interest in video game development and any machinery based software (as in a car, airplane, spaceship, etc.).</p>
-            <p>Also available for freelance or contract work for those needing a website for their personal or business use.</p>
-            <p>Can also work with 2D game development in Phaser3 and mild 3D animation with Three.js</p>
+            <p>Would be glad to branch out into freelance work as well, feel free to contact me at reillyamr@gmail.com.</p>
+            <p>Can also work with 2D game development in Phaser3 and mild 3D animation with Three.js; recently familiarized with node.js/express.js with MongoDB.</p>
             <p>Other facts: I'm a pretty good salsa dancer, I enjoy yoga, occasional running and weight training.  I'd like to learn how to sail.  I enjoy philosophical thought.  I also like wines from France or Spain and occasional old fashioneds.</p>
         </div>
 </div>
