--- a/working_changes_ip/pages/skill.html
+++ b/working_changes_ip/pages/skill.html
@@ -16,6 +16,7 @@
     <li><br><br>Ruby</li>
     <li><br><br>Sinatra</li>
     <li><br><br>Ruby on Rails</li>
+    <li><br><br>Node.js with Express.js</li>
     <li><br><br>JavaScript</li>
     <li><br><br>Phaser3</li<br>
     <li><br><br>Three.js</li>
@@ -25,7 +26,7 @@
 <ul><h3>Databases:</h3>
     <li><br><br>Sqlite</li>
     <li><br><br>Postgresql</li>
-    <li><br><br>ActiveRecord</li>
+    <li><br><br>MongoDB</li>
 </ul>
 
 <ul><h3>Web Development Priciples:</h3>
