change html for cpanel

--- a/changed_files_for_upload/index.html
+++ b/changed_files_for_upload/index.html
@@ -45,7 +45,7 @@
                 <a href="/pages/videos.html">Fullstack projects</a>
                 <a href="/cats-dream/game.html">2D Game Demo</a>
                 <a href="/pages/webglfullpage.html">Controllable view of above image</a>
-                    <a href="/pages/about.html">       About</a>
+                <a href="/pages/about.html">About</a>
             </nav>
 
         
@@ -57,7 +57,7 @@
               <h3>What's new and currently working on:</h3>
               <div class="content" >
                 <p>Final Project Completed! Fauxtel Hotels<br><a href="https://github.com/Tsunamins/FauxtelHotels">
-                    <img src="/images/GitHub-Mark-Light-64px.png"></a></p>
+                    <img src="./images/GitHub-Mark-Light-64px.png"></a></p>
                 <p>Applying for jobs! Hire me!</p>
                 <p>Setting goals for next project, something in Node.js perhaps</p>
                 <p>Improving this portfolio</p>
